02_tracing/service-03/deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-03
  name: service-03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-03
  template:
    metadata:
      labels:
        app: service-03
    spec:
      serviceAccountName: deg-services-sa
      containers:
        - image: quay.io/deguene-admin/service-03:06
          imagePullPolicy: IfNotPresent
          name: service-03
          ports:
            - containerPort: 8082
              protocol: TCP
