02_tracing/service-03/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-03
  name: services-03
spec:
  type: NodePort
  ports:
    - name: http
      port: 8082
      targetPort: 8082
  selector:
    app: service-03
