02_tracing/service-03/deploy/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: service-03
  name: services-03
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: services-03
    weight: 100
